fix horizontal scrollbar caused by header image stripe

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,13 @@
   padding: 0;
 }
 
-html, body { height: 100%; }
+html, body { 
+  height: 100%;
+}
+
+.container-twelve {
+  overflow: hidden;
+}
 
 body {
   color: #060100;
